--- a/src/components/toggler/toggler.component.html
+++ b/src/components/toggler/toggler.component.html
@@ -1,4 +1,4 @@
-<div class="clean toggler row" (click)="onToggle()">
+<div class="clean toggler row" (click)="onToggleChanged()">
     <fa class="clean toggler-icon" name="{{icon}}"></fa>
     <p class="clean toggler-title">{{title}}</p>
 </div>
