--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <div class="clean vynil-main-body">
     <vinyl-side-mode-switch [entries]="sideToggleEntries"></vinyl-side-mode-switch>
     <vynil-demo-side-bar></vynil-demo-side-bar>
+    <vynil-demo-content-panel></vynil-demo-content-panel>
 </div>
