--- a/src/components/inputs/button-input/button-input.component.html
+++ b/src/components/inputs/button-input/button-input.component.html
@@ -1,3 +1,3 @@
-<span class="clean">
-    
-</span>
+<div class="form-group clean input-form">
+    <div class="form-control vynil-input vynil-button-input" (click)="onClick($event)">{{text}}</div>
+</div>
