--- a/src/components/inputs/check-input/check-input.component.html
+++ b/src/components/inputs/check-input/check-input.component.html
@@ -1,3 +1,3 @@
-<div class="form-group clean input-form">
-    <input [(ngModel)]="value" readonly="{{enabled}}" class="form-control vynil-input vynil-text-input" type="checkbox" (blur)="onBlur()" >
+<div class="form-group clean input-form check-offset" [ngClass]="{'centered' : !fixed, 'fixed' : fixed}">
+    <mat-checkbox class="" [color]="'warn'" [disabled]="isReadonly" [(ngModel)]="value">{{text}}</mat-checkbox>
 </div>
