--- a/src/app/content-panel/content-panel.component.html
+++ b/src/app/content-panel/content-panel.component.html
@@ -5,5 +5,5 @@
     <iframe *ngIf="selectedTab == 'opera'" class="frame" src="https://en.wikipedia.org/wiki/Opera_(web_browser)"></iframe>
     <iframe *ngIf="selectedTab == 'edge'" class="frame" src="https://en.wikipedia.org/wiki/Microsoft_Edge"></iframe>
     <vynil-ace-editor *ngIf="selectedTab == 'ace'" [fileData]="code" [fileType]="'typescript'" (fileChanged)="onCodeChange($event)"></vynil-ace-editor>
-    <vynil-monaco-editor *ngIf="selectedTab == 'monaco'" [fileData]="code" [fileType]="'typescript'" (fileChanged)="onCodeChange($event)"></vynil-monaco-editor>
+    <!--<vynil-monaco-editor *ngIf="selectedTab == 'monaco'" [fileData]="code" [fileType]="'typescript'" (fileChanged)="onCodeChange($event)"></vynil-monaco-editor>-->
 </div>
