--- a/src/components/common/common.scss
+++ b/src/components/common/common.scss
@@ -4,11 +4,11 @@ $colorFore3: #BBBBBB;
 $colorFore4: #999999;
 $colorFore5: #777777;
 $colorMedi1: #666666;
-$colorMedi2: #555555;
-$colorMedi3: #444444;
-$colorBack1: #333333;
-$colorBack2: #222222;
-$colorBack3: #111111;
+$colorMedi2: #58595d;
+$colorMedi3: #48494d;
+$colorBack1: #38393d;
+$colorBack2: #28292d;
+$colorBack3: #18191d;
 $colorBack4: #000000;
 $colorHigh1: #FF802A;
 $colorHigh2: #F44336;
