--- a/projects/vynil-ui/src/lib/components/inputs/image-array-input/image-array-input.component.html
+++ b/projects/vynil-ui/src/lib/components/inputs/image-array-input/image-array-input.component.html
@@ -1,36 +1,36 @@
-<ooi-card cardStyle="dark" class="image-url-input">
-    <ooi-card class="variants-box">
-        <ooi-view flexDirection="row" width="18rem" [wrap]="true" [scrollable]="true" justifyContent="flex-start" columnGap="0.5rem" rowGap="0.5rem">
-            <ooi-view class="variant" *ngFor="let image of values; let i = index">
-                <ooi-image
+<vui-card cardStyle="dark" class="image-url-input">
+    <vui-card class="variants-box">
+        <vui-view flexDirection="row" width="18rem" [wrap]="true" [scrollable]="true" justifyContent="flex-start" columnGap="0.5rem" rowGap="0.5rem">
+            <vui-view class="variant" *ngFor="let image of values; let i = index">
+                <vui-image
                     [url]="image"
                     [circle]="true"
                     backgroundSize="cover"
                     [useBackgroundImage]="true"
                     [size]="{ x: 50, y: 50}">
-                </ooi-image>
+                </vui-image>
                 <div (click)="onRemove(i)" class="icon-float">
-                    <ooi-icon icon="remove"></ooi-icon>
+                    <vui-icon icon="remove"></vui-icon>
                 </div>
-            </ooi-view>
-            <ooi-circle *ngIf="uploadFeatureEnabled" (click)="onToggleUploadModal(true)" class="upload" radius="50px">
-                <ooi-icon icon="upload"></ooi-icon>
-            </ooi-circle>
-        </ooi-view>
-    </ooi-card>
-    <ooi-view padding="0 0.5rem" rowGap="0.25rem" alignItems="center">
-        <ooi-text size="medium">Image URL</ooi-text>
-        <ooi-view flexDirection="row" justifyContent="space-between" columnGap="0.25rem" alignItems="center">
-            <ooi-view alignItems="center">
-                <ooi-input [formControl]="imageUrlControl"></ooi-input>
-            </ooi-view>
-            <ooi-button (clicked)="onAdd()" [lean]="true">
-                <ooi-icon size="button" icon="add"></ooi-icon>
-                <ooi-text size="large">Add</ooi-text>
-            </ooi-button>
-        </ooi-view>
-    </ooi-view>
-</ooi-card>
-<ooi-modal [visible]="uploadModalVisible" (closed)="onToggleUploadModal(false)">
-    <ooi-image-upload (completed)="onUploadComplete($event)"></ooi-image-upload>
-</ooi-modal>
+            </vui-view>
+            <vui-circle *ngIf="uploadFeatureEnabled" (click)="onToggleUploadModal(true)" class="upload" radius="50px">
+                <vui-icon icon="upload"></vui-icon>
+            </vui-circle>
+        </vui-view>
+    </vui-card>
+    <vui-view padding="0 0.5rem" rowGap="0.25rem" alignItems="center">
+        <vui-text size="medium">Image URL</vui-text>
+        <vui-view flexDirection="row" justifyContent="space-between" columnGap="0.25rem" alignItems="center">
+            <vui-view alignItems="center">
+                <vui-input [formControl]="imageUrlControl"></vui-input>
+            </vui-view>
+            <vui-button (clicked)="onAdd()" [lean]="true">
+                <vui-icon size="button" icon="add"></vui-icon>
+                <vui-text size="large">Add</vui-text>
+            </vui-button>
+        </vui-view>
+    </vui-view>
+</vui-card>
+<vui-modal [visible]="uploadModalVisible" (closed)="onToggleUploadModal(false)">
+    <vui-image-upload (completed)="onUploadComplete($event)"></vui-image-upload>
+</vui-modal>
