--- a/projects/vynil-ui/src/lib/components/layout/circle/circle.component.html
+++ b/projects/vynil-ui/src/lib/components/layout/circle/circle.component.html
@@ -1,8 +1,8 @@
-<ooi-view
+<vui-view
     class="circle"
     [width]="radius"
     [height]="radius"
     alignItems="center"
     justifyContent="center">
     <ng-content></ng-content>
-</ooi-view>
+</vui-view>
