--- a/projects/vynil-ui/src/lib/components/layout/page-view/page-view.component.html
+++ b/projects/vynil-ui/src/lib/components/layout/page-view/page-view.component.html
@@ -1,5 +1,5 @@
-<ooi-card>
-    <ooi-view *ngIf="url" [scrollable]="true" maxHeight="80vh" padding="0.5rem">
+<vui-card>
+    <vui-view *ngIf="url" [scrollable]="true" maxHeight="80vh" padding="0.5rem">
         <img
             [src]="sanitizedUrl"
             *ngIf="isImageUrl"
@@ -11,5 +11,5 @@
             title="Character Sheet"
             class="ignore_events">
         </iframe>
-    </ooi-view>
-</ooi-card>
+    </vui-view>
+</vui-card>
