--- a/projects/vynil-ui/src/lib/components/layout/view/view.component.html
+++ b/projects/vynil-ui/src/lib/components/layout/view/view.component.html
@@ -2,6 +2,7 @@
     class="view"
     [ngClass]="{
         'wrap': wrap,
+        'relative': relative,
         'scrollable': scrollable}"
     [ngStyle]="styleObject">
     <ng-content></ng-content>
