--- a/projects/vynil-ui/src/lib/components/layout/view/view.component.scss
+++ b/projects/vynil-ui/src/lib/components/layout/view/view.component.scss
@@ -11,11 +11,15 @@
     align-items: flex-start;
     justify-content: space-between;
 
+    &.wrap {
+        flex-wrap: wrap;
+    }
+
     &.scrollable {
         overflow: auto;
     }
 
-    &.wrap {
-        flex-wrap: wrap;
+    &.relative {
+        position: relative;
     }
 }
