--- a/projects/vynil-ui/src/lib/components/selectors/tab-selector/tab-selector.component.html
+++ b/projects/vynil-ui/src/lib/components/selectors/tab-selector/tab-selector.component.html
@@ -1,4 +1,4 @@
-<ooi-view flexDirection="row">
+<vui-view flexDirection="row">
     <div
         class="tab"
         *ngFor="let option of options"
@@ -10,4 +10,4 @@
         (click)="onSelect(option)">
         {{ option }}
     </div>
-</ooi-view>
+</vui-view>
