--- a/projects/vynil-ui/src/lib/components/inputs/image-input/image-input.component.scss
+++ b/projects/vynil-ui/src/lib/components/inputs/image-input/image-input.component.scss
@@ -16,7 +16,7 @@
     }
 }
 
-ooi-input {
+vui-input {
     ::ng-deep .input{
         border-top-width: 0;
         border-radius: 0 0 0.75rem 0.75rem;
