--- a/projects/vynil-ui/src/lib/components/inputs/search-input/search-input.component.html
+++ b/projects/vynil-ui/src/lib/components/inputs/search-input/search-input.component.html
@@ -1,11 +1,11 @@
-<ooi-view
+<vui-view
     class="search"
     flexDirection="row"
     width="100%"
     [relative]="true"
     justifyContent="stretch">
-    <ooi-view class="icon" alignItems="center" justifyContent="center" height="2rem" width="2rem" padding="0.1rem 0 0 0">
-        <ooi-icon size="button" icon="search_main"></ooi-icon>
-    </ooi-view>
-    <ooi-input class="input" padding="0.5rem 0.5rem 0.5rem 1.75rem" [formControl]="control"></ooi-input>
-</ooi-view>
+    <vui-view class="icon" alignItems="center" justifyContent="center" height="2rem" width="2rem" padding="0.1rem 0 0 0">
+        <vui-icon size="button" icon="search_main"></vui-icon>
+    </vui-view>
+    <vui-input class="input" padding="0.5rem 0.5rem 0.5rem 1.75rem" [formControl]="control"></vui-input>
+</vui-view>
